fix graphs spacing

--- a/personal_site/blog/static/blog/css/graphs.css
+++ b/personal_site/blog/static/blog/css/graphs.css
@@ -132,6 +132,10 @@
     height: 100%;
 }
 
+.after-graphs{
+    width: 100%;
+}
+
 /* Responsive design */
 @media (max-width: 768px) {
     .carousel-wrapper {
@@ -151,6 +155,10 @@
 
     .carousel-indicator-dot.active {
         transform: scale(1.2);
+    }
+
+    .after-graphs{
+        margin-top: 10vh;
     }
 }
 
